@@ -1,2 +1,8 @@
 Makefile
 Makefile.in
+*.sh
+*.ps
+*.png
+*.cgm
+*.jpeg
+*.plm
